--- a/app/src/main/res/menu/pop_up_menu.xml
+++ b/app/src/main/res/menu/pop_up_menu.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/deleteNote"
-        android:title="Delete"/>
+        android:title="Delete"
+        android:icon="@drawable/ic_baseline_delete_24"
+        />
 </menu>
